fix implementation of side by side mode

--- a/config-example.ini
+++ b/config-example.ini
@@ -2,14 +2,17 @@
 
 [config]
 camera_id = 0
-port = 5000
 debug = True
+
+[tracking]
 min_detection = 0.7
 min_tracking = 0.7
-dead_zone = 80
 z_scale = -1000
 z_cutoff = 60
+
+[brushes]
 max_brush_size = 20
+default_color = "Red"
 
 [screen]
 width = 1920
