config.ini check before start

--- a/config-example.ini
+++ b/config-example.ini
@@ -11,8 +11,9 @@ z_scale = -1000
 z_cutoff = 60
 
 [brushes]
+default_brush_size = 10
 max_brush_size = 20
-default_color = "Red"
+default_color = red
 
 [screen]
 width = 1920
