--- a/config-example.ini
+++ b/config-example.ini
@@ -11,10 +11,14 @@ z_scale = -1000
 z_cutoff = 60
 finger_distance = 30
 
+
 [brushes]
 default_brush_size = 10
 max_brush_size = 20
 default_color = red
+
+[camera]
+max_height = 500
 
 [screen]
 width = 1920
