--- a/config-example.ini
+++ b/config-example.ini
@@ -15,7 +15,7 @@ finger_distance = 30
 [brushes]
 default_brush_size = 10
 max_brush_size = 20
-default_color = red
+default_color = Red
 
 [camera]
 max_height = 500
